# human-cut

./: .gitignore  .taurignore  Cargo.toml  LICENSE  README.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
src/: lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  config.rs  lib.rs
src/demo/: demo.rs
src/detection/: mod.rs  yolo.rs
src/processing/: exporter.rs  merger.rs  mod.rs  process.rs  reader.rs  segment.rs
src/tests/: base_test.rs
