[package]
name = "humancut_lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "humancut_lib"
path = "src/lib.rs"

[[bin]]
name = "humancut"
path = "src/main.rs"

[dependencies]
ort = { version = "2.0.0-rc.12", features = ["download-binaries"] }

clap = { version = "4.5", features = ["derive", "color"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
anyhow = "1.0"

env_logger = "0.11"
log = "0.4.31"

walkdir = "2.5"
glob = "0.3"
chrono = "0.4"
rayon = "1.10"
tempfile = "3.14"
reqwest = { version = "0.13.4", features = ["blocking"] }

image = "0.25"

ndarray = "0.17.2"

num_cpus = "1.16"