[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["geekpie"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.32"
anyhow = "1.0"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
humancut_lib = { path = "../" }
reqwest = { version = "0.13.4", features = ["blocking", "rustls"], default-features = false }
rustls = { version = "0.23", features = ["aws-lc-rs"] }
